--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
   <!-- FOOTER -->
   <footer class="footer">
-    © 2025 Desarrollo de Software
+    © 2025 Segundo Miguel Mina Moreno
   </footer>
 
 </div>
